[workspace]
members=["chain_listener", "orchestrator", "proxirun-sdk", "worker"]

resolver = "2"


[workspace.dependencies]
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core"}
aptos-protos={git="https://github.com/aptos-labs/aptos-core/"}
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }

rustls = "=0.22.0"
hyper-rustls = "=0.26.0"
dotenv = "0.15.0"

[patch.crates-io]
serde-reflection = { git = "https://github.com/aptos-labs/serde-reflection", rev = "73b6bbf748334b71ff6d7d09d06a29e3062ca075" }
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
tonic = { git = "https://github.com/aptos-labs/tonic.git", rev = "0da1ba8b1751d6e19eb55be24cccf9ae933c666e" }
