[package]
name = "dev"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace=true, features = ["full"] }
reqwest = { version = "0.11", features = ["multipart"] }
openai_api_rust = "0.1.9"
dotenv = {workspace=true}
serde_json = { workspace=true }
serde = {workspace=true, features=["derive"]}
fal-rust = "0.1.1"