[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
tokio = { workspace=true}
proxirun-sdk = {path="../proxirun-sdk"}
serde_json = { workspace=true}
aptos-sdk = { workspace=true}
bcs = {workspace=true}
dotenv = {workspace=true}
chain_listener = {path="../chain_listener"}
actix-multipart = "0.7.2"
tokio-stream = "0.1.16"
sanitize-filename = "0.5"
deadpool-postgres = "0.12.1"
postgres = "0.19.7"
postgres-types = "0.2.6"
tokio-postgres = "0.7.10"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
